Fixed flex spacing for images and added animation on hover

--- a/resources/css/journal.css
+++ b/resources/css/journal.css
@@ -25,6 +25,7 @@ nav {
     border: 0px;
     height: 200px;
     background-color: #23B5D3;
+    width: 100vw;
 }
 
 .journal-container {
